// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lists Component basic render 1`] = `
<RCTScrollView
  contentContainerStyle={
    Array [
      Object {
        "backgroundColor": "#f8f8f8",
      },
      undefined,
    ]
  }
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "Icon": <Image
              source={1}
              style={Object {}}
            />,
            "onPress": [MockFunction],
            "renderItem": [Function],
            "styles": Object {
              "container": Object {
                "height": 64,
              },
              "content": Object {
                "backgroundColor": "red",
              },
              "contentCenter": Object {
                "backgroundColor": "blue",
              },
              "contentLeft": Object {
                "height": 48,
                "width": 48,
              },
              "contentRight": Object {
                "height": 48,
                "width": 48,
              },
              "subTitle": Object {
                "color": "#000",
              },
              "title": Object {
                "color": "yellow",
              },
              "valueText": Object {
                "color": "pink",
              },
            },
            "subTitle": "subTitle_1",
            "title": "title_1",
          },
        ],
        "footer": true,
        "title": "Section Title",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  headerStyle={null}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  renderSectionFooter={[Function]}
  renderSectionHeader={[Function]}
  scrollEventThrottle={50}
  sections={
    Array [
      Object {
        "data": Array [
          Object {
            "Icon": <Image
              source={1}
              style={Object {}}
            />,
            "onPress": [MockFunction],
            "renderItem": [Function],
            "styles": Object {
              "container": Object {
                "height": 64,
              },
              "content": Object {
                "backgroundColor": "red",
              },
              "contentCenter": Object {
                "backgroundColor": "blue",
              },
              "contentLeft": Object {
                "height": 48,
                "width": 48,
              },
              "contentRight": Object {
                "height": 48,
                "width": 48,
              },
              "subTitle": Object {
                "color": "#000",
              },
              "title": Object {
                "color": "yellow",
              },
              "valueText": Object {
                "color": "pink",
              },
            },
            "subTitle": "subTitle_1",
            "title": "title_1",
          },
        ],
        "footer": true,
        "title": "Section Title",
      },
    ]
  }
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={false}
  updateCellsBatchingPeriod={50}
  useART={false}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Array [
            Object {
              "marginBottom": 8,
              "marginLeft": 32,
              "marginRight": 32,
              "marginTop": 24,
            },
            Array [
              Object {
                "marginTop": 24,
              },
              null,
            ],
          ]
        }
      >
        <Text
          accessible={true}
          align={null}
          allowFontScaling={false}
          color={null}
          ellipsizeMode="tail"
          size="normal"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#333",
                "fontSize": 17,
                "lineHeight": 24,
              },
              Array [
                Object {
                  "color": "rgba(51, 51, 51, 0.5)",
                },
                undefined,
              ],
            ]
          }
          type="paragraph"
          weight={null}
        >
          Section Title
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View />
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Array [
            Object {
              "marginBottom": 24,
              "marginLeft": 32,
              "marginRight": 32,
              "marginTop": 8,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          align={null}
          allowFontScaling={false}
          color={null}
          ellipsizeMode="tail"
          size="normal"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#333",
                "fontSize": 17,
                "lineHeight": 24,
              },
              Array [
                Object {
                  "color": "rgba(51, 51, 51, 0.5)",
                },
                undefined,
              ],
            ]
          }
          type="paragraph"
          weight={null}
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Lists Component basic render 1 1`] = `
<RCTScrollView
  contentContainerStyle={
    Array [
      Object {
        "backgroundColor": "#f8f8f8",
      },
      undefined,
    ]
  }
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "Icon": <Image
              source={1}
              style={Object {}}
            />,
            "onPress": [MockFunction],
            "styles": Object {
              "container": Object {
                "height": 64,
              },
              "content": Object {
                "backgroundColor": "red",
              },
              "contentCenter": Object {
                "backgroundColor": "blue",
              },
              "contentLeft": Object {
                "height": 48,
                "width": 48,
              },
              "contentRight": Object {
                "height": 48,
                "width": 48,
              },
              "subTitle": Object {
                "color": "#000",
              },
              "title": Object {
                "color": "yellow",
              },
              "valueText": Object {
                "color": "pink",
              },
            },
            "subTitle": "subTitle_1",
            "title": "title_1",
            "value": true,
          },
          Object {
            "Icon": <Image
              source={1}
              style={Object {}}
            />,
            "onPress": [MockFunction],
            "styles": Object {
              "container": Object {
                "height": 64,
              },
              "content": Object {
                "backgroundColor": "red",
              },
              "contentCenter": Object {
                "backgroundColor": "blue",
              },
              "contentLeft": Object {
                "height": 48,
                "width": 48,
              },
              "contentRight": Object {
                "height": 48,
                "width": 48,
              },
              "subTitle": Object {
                "color": "#000",
              },
              "title": Object {
                "color": "yellow",
              },
              "valueText": Object {
                "color": "pink",
              },
            },
            "subTitle": "subTitle_1",
            "title": "title_1",
            "value": undefined,
          },
        ],
        "footer": true,
        "title": "Section Title",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  headerStyle={null}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  renderSectionFooter={[Function]}
  renderSectionHeader={[Function]}
  scrollEventThrottle={50}
  sections={
    Array [
      Object {
        "data": Array [
          Object {
            "Icon": <Image
              source={1}
              style={Object {}}
            />,
            "onPress": [MockFunction],
            "styles": Object {
              "container": Object {
                "height": 64,
              },
              "content": Object {
                "backgroundColor": "red",
              },
              "contentCenter": Object {
                "backgroundColor": "blue",
              },
              "contentLeft": Object {
                "height": 48,
                "width": 48,
              },
              "contentRight": Object {
                "height": 48,
                "width": 48,
              },
              "subTitle": Object {
                "color": "#000",
              },
              "title": Object {
                "color": "yellow",
              },
              "valueText": Object {
                "color": "pink",
              },
            },
            "subTitle": "subTitle_1",
            "title": "title_1",
            "value": true,
          },
          Object {
            "Icon": <Image
              source={1}
              style={Object {}}
            />,
            "onPress": [MockFunction],
            "styles": Object {
              "container": Object {
                "height": 64,
              },
              "content": Object {
                "backgroundColor": "red",
              },
              "contentCenter": Object {
                "backgroundColor": "blue",
              },
              "contentLeft": Object {
                "height": 48,
                "width": 48,
              },
              "contentRight": Object {
                "height": 48,
                "width": 48,
              },
              "subTitle": Object {
                "color": "#000",
              },
              "title": Object {
                "color": "yellow",
              },
              "valueText": Object {
                "color": "pink",
              },
            },
            "subTitle": "subTitle_1",
            "title": "title_1",
            "value": undefined,
          },
        ],
        "footer": true,
        "title": "Section Title",
      },
    ]
  }
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={false}
  updateCellsBatchingPeriod={50}
  useART={false}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Array [
            Object {
              "marginBottom": 8,
              "marginLeft": 32,
              "marginRight": 32,
              "marginTop": 24,
            },
            Array [
              Object {
                "marginTop": 24,
              },
              null,
            ],
          ]
        }
      >
        <Text
          accessible={true}
          align={null}
          allowFontScaling={false}
          color={null}
          ellipsizeMode="tail"
          size="normal"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#333",
                "fontSize": 17,
                "lineHeight": 24,
              },
              Array [
                Object {
                  "color": "rgba(51, 51, 51, 0.5)",
                },
                undefined,
              ],
            ]
          }
          type="paragraph"
          weight={null}
        >
          Section Title
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "alignSelf": "stretch",
              "backgroundColor": "#fff",
              "borderRadius": 0,
              "flexGrow": 0,
              "height": 64,
              "marginBottom": 0,
              "marginLeft": 0,
              "marginRight": 0,
              "marginTop": 0,
              "minHeight": 48,
              "opacity": 1,
            }
          }
        >
          <View
            disabled={false}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "borderRadius": 0,
                  "flexDirection": "row",
                  "opacity": 1,
                  "paddingBottom": 12,
                  "paddingLeft": 28,
                  "paddingRight": 28,
                  "paddingTop": 12,
                },
                Array [
                  false,
                  undefined,
                  Object {
                    "backgroundColor": "red",
                  },
                ],
              ]
            }
          >
            <View
              style={
                Array [
                  Object {
                    "justifyContent": "center",
                    "marginRight": 20,
                  },
                  Object {
                    "height": 48,
                    "width": 48,
                  },
                ]
              }
            >
              <Image
                source={1}
                style={Object {}}
              />
            </View>
            <View
              style={
                Array [
                  Object {
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "flexShrink": 1,
                    "justifyContent": "center",
                  },
                  Object {
                    "backgroundColor": "blue",
                  },
                ]
              }
            >
              <Text
                accessible={true}
                align={null}
                allowFontScaling={false}
                color={null}
                ellipsizeMode="tail"
                size="small"
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#333",
                      "fontSize": 17,
                      "lineHeight": 24,
                    },
                    Array [
                      Object {
                        "color": "#333",
                      },
                      Array [
                        undefined,
                        Object {
                          "color": "yellow",
                        },
                      ],
                    ],
                  ]
                }
                type="title"
                weight={null}
              >
                title_1
              </Text>
              <Text
                accessible={true}
                align={null}
                allowFontScaling={false}
                color={null}
                ellipsizeMode="tail"
                size="large"
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#333",
                      "fontSize": 17,
                      "lineHeight": 24,
                    },
                    Array [
                      Object {
                        "color": "rgba(51, 51, 51, 0.5)",
                        "marginTop": 4,
                      },
                      Array [
                        undefined,
                        Object {
                          "color": "#000",
                        },
                      ],
                    ],
                  ]
                }
                type="paragraph"
                weight={null}
              >
                subTitle_1
              </Text>
            </View>
            <View
              accessible={true}
              isTVSelectable={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "height": 48,
                  "marginLeft": 20,
                  "opacity": 1,
                  "width": 48,
                }
              }
            >
              <View
                needsOffscreenAlphaCompositing={true}
                style={
                  Array [
                    undefined,
                    false,
                  ]
                }
              >
                <View
                  accessibilityLabel="SwitchButton"
                  accessible={true}
                  isTVSelectable={true}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "transparent",
                      "height": NaN,
                      "justifyContent": "center",
                      "opacity": 1,
                      "width": NaN,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "borderRadius": NaN,
                          "height": undefined,
                          "justifyContent": "center",
                          "width": undefined,
                        },
                        Object {
                          "backgroundColor": "#44DB5E",
                          "borderColor": "#44DB5E",
                        },
                      ]
                    }
                  />
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "alignSelf": "flex-start",
                        "backgroundColor": "#fff",
                        "borderRadius": NaN,
                        "elevation": 2,
                        "height": undefined,
                        "justifyContent": "center",
                        "position": "absolute",
                        "shadowColor": "rgba(0, 0, 0, 0.3)",
                        "shadowOffset": Object {
                          "height": 3,
                          "width": 0,
                        },
                        "shadowOpacity": 1,
                        "shadowRadius": 3,
                        "transform": Array [
                          Object {
                            "translateX": NaN,
                          },
                        ],
                        "width": undefined,
                      }
                    }
                  />
                </View>
              </View>
            </View>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(51, 51, 51, 0.1)",
                "height": 0.5,
                "marginLeft": 32,
              },
              null,
            ]
          }
        />
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#fff",
            "borderRadius": 0,
            "flexGrow": 0,
            "height": 64,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "minHeight": 48,
            "opacity": 1,
          }
        }
      >
        <View
          disabled={false}
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 0,
                "flexDirection": "row",
                "opacity": 1,
                "paddingBottom": 12,
                "paddingLeft": 28,
                "paddingRight": 28,
                "paddingTop": 12,
              },
              Array [
                false,
                undefined,
                Object {
                  "backgroundColor": "red",
                },
              ],
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "justifyContent": "center",
                  "marginRight": 20,
                },
                Object {
                  "height": 48,
                  "width": 48,
                },
              ]
            }
          >
            <Image
              source={1}
              style={Object {}}
            />
          </View>
          <View
            style={
              Array [
                Object {
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "justifyContent": "center",
                },
                Object {
                  "backgroundColor": "blue",
                },
              ]
            }
          >
            <Text
              accessible={true}
              align={null}
              allowFontScaling={false}
              color={null}
              ellipsizeMode="tail"
              size="small"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "color": "#333",
                    "fontSize": 17,
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "color": "#333",
                    },
                    Array [
                      undefined,
                      Object {
                        "color": "yellow",
                      },
                    ],
                  ],
                ]
              }
              type="title"
              weight={null}
            >
              title_1
            </Text>
            <Text
              accessible={true}
              align={null}
              allowFontScaling={false}
              color={null}
              ellipsizeMode="tail"
              size="large"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "color": "#333",
                    "fontSize": 17,
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "color": "rgba(51, 51, 51, 0.5)",
                      "marginTop": 4,
                    },
                    Array [
                      undefined,
                      Object {
                        "color": "#000",
                      },
                    ],
                  ],
                ]
              }
              type="paragraph"
              weight={null}
            >
              subTitle_1
            </Text>
          </View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "height": 48,
                "marginLeft": 20,
                "opacity": 1,
                "width": 48,
              }
            }
          />
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Array [
            Object {
              "marginBottom": 24,
              "marginLeft": 32,
              "marginRight": 32,
              "marginTop": 8,
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          align={null}
          allowFontScaling={false}
          color={null}
          ellipsizeMode="tail"
          size="normal"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#333",
                "fontSize": 17,
                "lineHeight": 24,
              },
              Array [
                Object {
                  "color": "rgba(51, 51, 51, 0.5)",
                },
                undefined,
              ],
            ]
          }
          type="paragraph"
          weight={null}
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Lists Component should able to use SectionList props 1`] = `
<RCTScrollView
  ListHeaderComponent={<View />}
  contentContainerStyle={
    Array [
      Object {
        "backgroundColor": "#f8f8f8",
      },
      undefined,
    ]
  }
  data={
    Array [
      Object {
        "data": Array [
          Object {
            "Action": [Function],
            "key": 1,
            "title": "title_1",
            "value": "1",
          },
        ],
        "title": "Section Title",
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  headerStyle={null}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  renderSectionFooter={[Function]}
  renderSectionHeader={[Function]}
  scrollEventThrottle={50}
  sections={
    Array [
      Object {
        "data": Array [
          Object {
            "Action": [Function],
            "key": 1,
            "title": "title_1",
            "value": "1",
          },
        ],
        "title": "Section Title",
      },
    ]
  }
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={false}
  updateCellsBatchingPeriod={50}
  useART={false}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View />
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Array [
            Object {
              "marginBottom": 8,
              "marginLeft": 32,
              "marginRight": 32,
              "marginTop": 24,
            },
            Array [
              Object {
                "marginTop": 24,
              },
              null,
            ],
          ]
        }
      >
        <Text
          accessible={true}
          align={null}
          allowFontScaling={false}
          color={null}
          ellipsizeMode="tail"
          size="normal"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "color": "#333",
                "fontSize": 17,
                "lineHeight": 24,
              },
              Array [
                Object {
                  "color": "rgba(51, 51, 51, 0.5)",
                },
                undefined,
              ],
            ]
          }
          type="paragraph"
          weight={null}
        >
          Section Title
        </Text>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        accessible={true}
        isTVSelectable={true}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "alignSelf": "stretch",
            "backgroundColor": "#fff",
            "borderRadius": 0,
            "flexGrow": 0,
            "marginBottom": 0,
            "marginLeft": 0,
            "marginRight": 0,
            "marginTop": 0,
            "minHeight": 48,
            "opacity": 1,
          }
        }
      >
        <View
          disabled={false}
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 0,
                "flexDirection": "row",
                "opacity": 1,
                "paddingBottom": 12,
                "paddingLeft": 28,
                "paddingRight": 28,
                "paddingTop": 12,
              },
              Array [
                false,
                undefined,
                undefined,
              ],
            ]
          }
        >
          <View
            style={
              Array [
                Object {
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "justifyContent": "center",
                },
                undefined,
              ]
            }
          >
            <Text
              accessible={true}
              align={null}
              allowFontScaling={false}
              color={null}
              ellipsizeMode="tail"
              size="small"
              style={
                Array [
                  Object {
                    "backgroundColor": "transparent",
                    "color": "#333",
                    "fontSize": 17,
                    "lineHeight": 24,
                  },
                  Array [
                    Object {
                      "color": "#333",
                    },
                    Array [
                      undefined,
                      undefined,
                    ],
                  ],
                ]
              }
              type="title"
              weight={null}
            >
              title_1
            </Text>
          </View>
          <View
            accessible={true}
            isTVSelectable={true}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "flexDirection": "row",
                "marginLeft": 20,
                "opacity": 1,
              }
            }
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flexDirection": "row",
                }
              }
            >
              <Text
                accessible={true}
                align={null}
                allowFontScaling={false}
                color={null}
                ellipsizeMode="tail"
                size="large"
                style={
                  Array [
                    Object {
                      "backgroundColor": "transparent",
                      "color": "#333",
                      "fontSize": 17,
                      "lineHeight": 24,
                    },
                    Array [
                      Object {
                        "color": "rgba(51, 51, 51, 0.5)",
                      },
                      Array [
                        undefined,
                        undefined,
                      ],
                    ],
                  ]
                }
                type="paragraph"
                weight={null}
              >
                1
              </Text>
              <View>
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                >
                  Action
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
  </View>
</RCTScrollView>
`;

exports[`Lists Component should not render SectionHeader without title 1`] = `
<RCTScrollView
  ListHeaderComponent={<View />}
  contentContainerStyle={
    Array [
      Object {
        "backgroundColor": "#f8f8f8",
      },
      undefined,
    ]
  }
  data={
    Array [
      Object {
        "data": Array [],
        "title": null,
      },
    ]
  }
  disableVirtualization={false}
  getItem={[Function]}
  getItemCount={[Function]}
  headerStyle={null}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  onContentSizeChange={[Function]}
  onEndReachedThreshold={2}
  onLayout={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  renderItem={[Function]}
  renderSectionFooter={[Function]}
  renderSectionHeader={[Function]}
  scrollEventThrottle={50}
  sections={
    Array [
      Object {
        "data": Array [],
        "title": null,
      },
    ]
  }
  stickyHeaderIndices={Array []}
  stickySectionHeadersEnabled={false}
  updateCellsBatchingPeriod={50}
  useART={false}
  windowSize={21}
>
  <View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View />
    </View>
    <View
      onLayout={[Function]}
      style={null}
    >
      <View
        style={
          Object {
            "marginTop": 12,
          }
        }
      />
    </View>
    <View
      onLayout={[Function]}
      style={null}
    />
  </View>
</RCTScrollView>
`;
